ADIN1200_Implementation: - renamed ADINButtonsView to ExtraCommandsView - added PhyAddress, DeviceType and DeviceStatus   - Device Status currently includes IsSoftwarePowerDown   - added interface and ADIN1200 files for declaration and for initial value - changed ADIN models to output its physical address to be used for devicelisting's phyaddress (default = 0) - added phyaddress and device type determination at devicelisting - added device status view beside link properties and test mode at their tabs - added device status view and extrabuttons view to operations view, as well as their viewmodels - added GetPhyState and GetLinkStatus to firmware API (empty implementation to 1300) - added softwarepowerdownbuttontext at extra command view model to set and get state for issoftwarepowerdown - added softwarepowerdownbuttontext to be called by power down command - changed some buttonstyle as software power down button is changed to toggle button - commented out anstatus, generator, link length, master slave status, mse value and txlevelstatus at devicestatus viewmodel - adjusted other variables to use new structure

--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -171,9 +171,10 @@
     </Style>
 
     <Style x:Key="ToggleStyle" TargetType="{x:Type telerik:RadToggleButton}">
+        <Setter Property="Margin" Value="3"/>
+        <Setter Property="Height" Value="25"/>
         <Setter Property="CornerRadius" Value="8"/>
         <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="Width" Value="80"/>
         <Setter Property="BorderBrush" Value="{StaticResource Button.BorderBrush}"/>
         <Setter Property="Background" Value="{StaticResource Button.Background}"/>
         <Setter Property="Foreground" Value="{StaticResource Button.Foreground}"/>
