ADIN1200_Implementation: - applied locks at device listing viewmodel during device selection, insertion and removal to prioritize these processes against background threads - applied removal of writeprocesscompleted event upon device removal/changing to prevent feedbacklock duplication - added new action linkstatuschanged - added onlinkstatuschanged and onsoftwarepowerdownchanged at selecteddevicestore - updated devicestatus view model to update link status events - updated software powerdown command - added file disable link command and auto neg command - added methods for firmware API for enable/disable link and restarting auto negotiation (linking) - updated extracommands view model   - added and used _powerdownstatus (getting value from device status view model) for uses of _linkstatus   - change _linkstatus to get the linkstatus from device status instead of powerdownstatus   - changed SoftwarePowerDownButtonText to PowerDownStatus to use _powerdownstatus state, to be used for function and state of software power button   - added LinkStatus to use _linkstatus to be used for function and state of enable/disable linking button   - added IsPoweredUp and _isPoweredUp as basis for enabling enable/disable link button and restart linking button

--- a/ADIN.WPF/View/ExtraCommandsView.xaml
+++ b/ADIN.WPF/View/ExtraCommandsView.xaml
@@ -9,9 +9,9 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <StackPanel Orientation="Vertical">
-            <telerik:RadToggleButton Style="{StaticResource ToggleStyle}" Content="{Binding SoftwarePowerDownButtonText}" Command="{Binding SoftwarePowerDownCommand}" />
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Disable Linking"/>
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Restart Linking"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding PowerDownStatus}" Command="{Binding SoftwarePowerDownCommand}" />
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding LinkStatus}" Command="{Binding DisableLinkCommand}" IsEnabled="{Binding IsPoweredUp}"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Restart Linking" Command="{Binding AutoNegCommand}" IsEnabled="{Binding IsPoweredUp}"/>
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Save Registers"/>
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Load Registers"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)"/>
