--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -176,12 +176,12 @@
             <Grid Grid.ColumnSpan="2" Grid.Row="2" Margin="0 10 0 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="7*"/>
-                        <ColumnDefinition Width="4"/>
                         <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="4"/>
+                        <ColumnDefinition Width="7*"/>
                     </Grid.ColumnDefinitions>
-                    <components:LogActivityView Grid.Column="0" DataContext="{Binding LogActivityVM}"/>
-                    <!--<components:RegisterAccessView Grid.Column="2" DataContext="{Binding RegisterAccessViewModel}"/>-->
+                    <local:RegisterAccessView Grid.Column="0" DataContext="{Binding RegisterAccessVM}"/>
+                    <components:LogActivityView Grid.Column="2" DataContext="{Binding LogActivityVM}"/>
                 </Grid>
             </Grid>
         </Grid>
