--- a/ADIN.WPF/View/RegisterAccessView.xaml
+++ b/ADIN.WPF/View/RegisterAccessView.xaml
@@ -4,10 +4,87 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ADIN.WPF.View"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="300" d:DesignWidth="600">
     <Grid>
-        <Label Content="Register Access View"/>
-        <Button Content="Link Prop" Command="{Binding NavigateLinkPorpCommand}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Margin="0 0 0 2.5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" CornerRadius="5,5,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}">
+                <DockPanel>
+                    <TextBlock VerticalAlignment="Center" Foreground="WhiteSmoke" FontWeight="DemiBold" FontSize="14" Text="Register Read" Padding="5"/>
+                </DockPanel>
+            </Border>
+            <Border Grid.Row="1" CornerRadius="0" BorderBrush="Gray" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="117"/>
+                        <ColumnDefinition Width="4*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Margin="10 0 0 0"/>
+                    <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Margin="10 0 0 0">
+                        <TextBlock Text="0x " VerticalAlignment="Center"/>
+                        <TextBox Width="80" Text="{Binding ReadInput, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="20 0 0 0">
+                        <TextBlock Text="0x" VerticalAlignment="Center"/>
+                        <TextBlock Text="{Binding ReadOutput}"  VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <telerik:RadButton Grid.Column="2" Grid.Row="1" Content="Read" Margin="10 0 0 0" 
+                                   HorizontalAlignment="Left" Width="60" Style="{StaticResource TelerikButtonStyle}" 
+                                   Command="{Binding ReadRegisterCommand}"/>
+                </Grid>
+            </Border>
+        </Grid>
+        <Grid Grid.Row="1" Margin="0 2.5 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" CornerRadius="5,5,0,0" BorderBrush="Transparent" Background="{StaticResource LogActivity.Title.Background}" Margin="0 0 0 0 ">
+                <DockPanel>
+                    <TextBlock VerticalAlignment="Center" Foreground="WhiteSmoke" FontWeight="DemiBold" FontSize="14" Text="Register Write" Padding="5"/>
+                </DockPanel>
+            </Border>
+            <Border Grid.Row="1" CornerRadius="0" BorderBrush="Gray" BorderThickness="1 0 1 1" Background="Transparent" Padding="5">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="4*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Address:"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Value:" Margin="10 0 0 0"/>
+                    <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Margin="10 0 0 0">
+                        <TextBlock Text="0x " VerticalAlignment="Center"/>
+                        <TextBox Text="{Binding WriteInput}" Width="80" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="20 0 0 0">
+                        <TextBlock Text="0x " VerticalAlignment="Center"/>
+                        <TextBox Text="{Binding WriteValue}" Width="80" VerticalAlignment="Center"/>
+                    </StackPanel>
+                    <telerik:RadButton Grid.Column="2" Grid.Row="1" Content="Write" Margin="10 0 0 0" 
+                                   HorizontalAlignment="Left" Width="60" Style="{StaticResource TelerikButtonStyle}" 
+                                   Command="{Binding WriteRegisterCommand}"/>
+                </Grid>
+            </Border>
+        </Grid>
     </Grid>
 </UserControl>
