ADIN1200_Implementation: - added interfaces IFrameGenChecker - added IFrameGenCheckerAPI to IADIN1200 and 1300 - added FrameGenCheckerView to operationview using devicestatusview beside it - commented out MACAddress part for FrameGenCheckerView - added MACAddress xaml files to FrameGenCheckerView - added FrameGenCheckerViewModel to operation viewmodel - added ExecuteFrameCheckerCommand and ResetFrameDeviceCheckerCommand - added FrameGenCheckerADIN1200 for values for ADIN1200 - updated command files for firmware method - added needed event actions to selecteddevicestore - added and updated FrameGenChecker view model for the new structure - added firmware API method for frame gen checker, commented out part for MACAddress

--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -90,6 +90,19 @@
                             </Grid>
                         </Grid>
                     </TabItem>
+                    <TabItem Header="FrameGenerator/Checker">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" MinWidth="500"/>
+                                <ColumnDefinition Width="3"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <local:FrameGenCheckerView DataContext="{Binding FrameGenCheckerVM}"/>
+                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
+                            <components:DeviceStatusView Grid.Column="2" DataContext="{Binding DeviceStatusVM}"/>
+                        </Grid>
+
+                    </TabItem>
                     <TabItem Header="Register Access">
                         <local:RegisterListingView DataContext="{Binding RegisterListingVM}"/>
                     </TabItem>
