ADIN1200_Implementation: - added device status view for frame generator/checker tab - enabled (uncommented) checker, generator and MSE value at the view model - removed read register background thread at device status view model as it is already placed at registerlisting view model - added events and methods needed for generator, checker and MSE at firmware API - added events needed above to selected device store - changed placeholder device status view to frame gen checker status view at operation view

--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -99,7 +99,7 @@
                             </Grid.ColumnDefinitions>
                             <local:FrameGenCheckerView DataContext="{Binding FrameGenCheckerVM}"/>
                             <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <components:DeviceStatusView Grid.Column="2" DataContext="{Binding DeviceStatusVM}"/>
+                            <components:FrameGenCheckerStatusView Grid.Column="2" DataContext="{Binding DeviceStatusVM}"/>
                         </Grid>
 
                     </TabItem>
