--- a/ADIN.WPF/View/RegisterListingView.xaml
+++ b/ADIN.WPF/View/RegisterListingView.xaml
@@ -28,7 +28,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="150" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
