--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -40,9 +40,11 @@
     <Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-                <Setter Property="Foreground" Value="{StaticResource Button.IsMouseOver.Foreground}"/>
-                <Setter Property="Background" Value="{StaticResource Button.IsMouseOver.Background}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource Button.IsMouseOver.BorderBrush}"/>
+                <Setter Property="Foreground" Value="{StaticResource button.secondary.hover.foreground}"/>
+                <Setter Property="Background" Value="{StaticResource button.secondary.hover.background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource button.secondary.hover.foreground}"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="CornerRadius" Value="2"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="true">
                 <Setter Property="Foreground" Value="Black"/>
@@ -56,9 +58,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ButtonBase}">
-                    <Border CornerRadius="8" Background="{TemplateBinding Background}" Name="button">
+                    <Border CornerRadius="2" Background="{TemplateBinding Background}" Name="button" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
-                            <Border BorderThickness="1,0,1,1" BorderBrush="Black" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
+                            <!--<Border BorderThickness="1,0,1,1" BorderBrush="Black" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
                                 <Border.Effect>
                                     <BlurEffect Radius="2" KernelType="Gaussian"/>
                                 </Border.Effect>
@@ -67,16 +69,19 @@
                                 <Border.Effect>
                                     <BlurEffect Radius="2" KernelType="Gaussian"/>
                                 </Border.Effect>
-                            </Border>
+                            </Border>-->
                             <ContentPresenter TextBlock.FontSize="{TemplateBinding FontSize}" TextBlock.FontFamily="{TemplateBinding FontFamily}" TextBlock.Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"></ContentPresenter>
                         </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="Background" Value="#002060" />
-        <Setter Property="Background" Value="{StaticResource Button.Background}" />
-        <Setter Property="Foreground" Value="{StaticResource Button.Foreground}" />
+        <Setter Property="Background" Value="{StaticResource button.secondary.background}" />
+        <Setter Property="BorderBrush" Value="{StaticResource button.secondary.borderbrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource button.secondary.foreground}" />
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="CornerRadius" Value="2"/>
+        <Setter Property="FontFamily" Value="Barlow"/>
     </Style>
 
     <Style x:Key="TelerikButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource ButtonStyle}">
@@ -226,6 +231,7 @@
     <Style x:Key="ResetPhyButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource TelerikButtonStyle}">
         <Setter Property="Background" Value="{StaticResource Reset.Background}"/>
         <Setter Property="Foreground" Value="{StaticResource Reset.Foreground}"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Foreground" Value="{StaticResource Reset.IsMouseOver}"/>
