ADIN1200_Implementation: - added Loopback command to loopback view model and Remote Loopback command to framegenchecker view model - added loopback.png and set all adin1200 loopbacks imagepath to loopback.png - changed loopback dropdown selection to radio buttons - added (updated) image for loopback view - added register writes for firmware API method for remote loopback - absorbed set Rx/Tx suppression setting method to set loopback setting - added remote loopback button to frame gen checker view - implemented save/load register commands to save and load buttons at extracommands - updated register action commands to use local register variable and to use info type feedback log - updated read registers to return observable collection register model - removed clock pin control tab and rearraged tabs - set register access at operation view to have fixed width

--- a/ADIN.WPF/View/ExtraCommandsView.xaml
+++ b/ADIN.WPF/View/ExtraCommandsView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              xmlns:local="clr-namespace:ADIN.WPF.View"
+             xmlns:enum="clr-namespace:ADIN.Device.Models;assembly=ADIN.Device"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -12,8 +13,8 @@
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding PowerDownStatus}" Command="{Binding SoftwarePowerDownCommand}" />
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding LinkStatus}" Command="{Binding DisableLinkCommand}" IsEnabled="{Binding IsPoweredUp}"/>
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Restart Linking" Command="{Binding AutoNegCommand}" IsEnabled="{Binding IsPoweredUp}"/>
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Save Registers"/>
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Load Registers"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Save Registers" Command="{Binding RegisterActionCommand}" CommandParameter="{x:Static enum:RegisterActionType.Save}"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Load Registers" Command="{Binding RegisterActionCommand}" CommandParameter="{x:Static enum:RegisterActionType.Load}"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys"/>
             <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: PHY"/>
