--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -48,7 +48,7 @@
                 <TextBlock Text="Local Devices" FontWeight="Bold" FontSize="18" Margin="0 20 0 5"/>
                 <components:DeviceListing DataContext="{Binding DeviceListingVM}" Height="150"/>
                 <!--<local:ADINButtonsView/>-->
-                <local:ExtraCommandsView DataContext="{Binding ExtraCommandsVM}" Height="230"/>
+                <local:ExtraCommandsView DataContext="{Binding ExtraCommandsVM}" Height="253"/>
             </StackPanel>
             <Grid Grid.Column="1" Grid.Row="1">
                 <!--<ContentControl Content="{Binding CurrentViewModel}">
@@ -101,6 +101,21 @@
                             <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
                             <components:FrameGenCheckerStatusView Grid.Column="2" DataContext="{Binding DeviceStatusVM}"/>
                         </Grid>
+
+                    </TabItem>
+                    <TabItem Header="Register Access">
+                        <local:RegisterListingView DataContext="{Binding RegisterListingVM}"/>
+                    </TabItem>
+                    <TabItem Header="Clock Pin Control">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" MinWidth="400"/>
+                                <ColumnDefinition Width="3"/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <local:ClockPinControlView Grid.Column="0" DataContext="{Binding ClockPinControlVM}"/>
+                            <!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />-->
+                        </Grid>
                     </TabItem>
                     <TabItem Header="Test Modes">
                         <Grid>
@@ -113,20 +128,6 @@
                             <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
                         </Grid>
                     </TabItem>
-                    <TabItem Header="Register Access">
-                        <local:RegisterListingView DataContext="{Binding RegisterListingVM}"/>
-                    </TabItem>
-                    <!--<TabItem Header="Clock Pin Control">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*" MinWidth="400"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <local:ClockPinControlView Grid.Column="0" DataContext="{Binding ClockPinControlVM}"/>
-                            --><!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />--><!--
-                        </Grid>
-                    </TabItem>-->
                 </TabControl>
             </Grid>
             <!--<Grid Grid.Column="1" Grid.Row="1">
@@ -202,9 +203,9 @@
             <Grid Grid.ColumnSpan="2" Grid.Row="2" Margin="0 10 0 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="330"/>
                         <ColumnDefinition Width="4"/>
-                        <ColumnDefinition Width="7*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <local:RegisterAccessView Grid.Column="0" DataContext="{Binding RegisterAccessVM}"/>
                     <components:LogActivityView Grid.Column="2" DataContext="{Binding LogActivityVM}"/>
