--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -3,12 +3,13 @@
                     xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
                     xmlns:local="clr-namespace:ADIN.WPF.Themes">
     <!--Flat Style-->
-    <!--<Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
-        <Setter Property="CornerRadius" Value="8"/>
-        <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="BorderBrush" Value="{StaticResource Button.BorderBrush}"/>
-        <Setter Property="Background" Value="{StaticResource Button.Background}"/>
-        <Setter Property="Foreground" Value="{StaticResource Button.Foreground}"/>
+    <Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
+        <Setter Property="Background" Value="{StaticResource button.secondary.background}" />
+        <Setter Property="BorderBrush" Value="{StaticResource button.secondary.borderbrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource button.secondary.foreground}" />
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="CornerRadius" Value="2"/>
+        <Setter Property="FontFamily" Value="Barlow"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type telerik:RadButton}">
@@ -22,9 +23,9 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-                <Setter Property="Foreground" Value="{StaticResource Button.IsMouseOver.Foreground}"/>
-                <Setter Property="Background" Value="{StaticResource Button.IsMouseOver.Background}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource Button.IsMouseOver.BorderBrush}"/>
+                <Setter Property="Foreground" Value="{StaticResource button.secondary.hover.foreground}"/>
+                <Setter Property="Background" Value="{StaticResource button.secondary.hover.background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource button.secondary.hover.foreground}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="true">
                 <Setter Property="Foreground" Value="Black"/>
@@ -35,9 +36,9 @@
                 <Setter Property="BorderBrush" Value="{StaticResource Button.IsEnable.BorderBrush}"/>
             </Trigger>
         </Style.Triggers>
-    </Style>-->
+    </Style>
     
-    <Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
+    <!--<Style x:Key="ButtonStyle" TargetType="{x:Type telerik:RadButton}">
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
                 <Setter Property="Foreground" Value="{StaticResource button.secondary.hover.foreground}"/>
@@ -58,9 +59,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ButtonBase}">
-                    <Border CornerRadius="2" Background="{TemplateBinding Background}" Name="button" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                    <Border CornerRadius="3" Background="{TemplateBinding Background}" Name="button" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
-                            <!--<Border BorderThickness="1,0,1,1" BorderBrush="Black" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
+                            <Border BorderThickness="1,0,1,1" BorderBrush="Black" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
                                 <Border.Effect>
                                     <BlurEffect Radius="2" KernelType="Gaussian"/>
                                 </Border.Effect>
@@ -69,7 +70,7 @@
                                 <Border.Effect>
                                     <BlurEffect Radius="2" KernelType="Gaussian"/>
                                 </Border.Effect>
-                            </Border>-->
+                            </Border>
                             <ContentPresenter TextBlock.FontSize="{TemplateBinding FontSize}" TextBlock.FontFamily="{TemplateBinding FontFamily}" TextBlock.Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"></ContentPresenter>
                         </Grid>
                     </Border>
@@ -82,7 +83,7 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="2"/>
         <Setter Property="FontFamily" Value="Barlow"/>
-    </Style>
+    </Style>-->
 
     <Style x:Key="TelerikButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource ButtonStyle}">
         <Setter Property="Margin" Value="3"/>
@@ -229,13 +230,12 @@
 
     <!--Extra Command Button-->
     <Style x:Key="ResetPhyButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource TelerikButtonStyle}">
-        <Setter Property="Background" Value="{StaticResource Reset.Background}"/>
-        <Setter Property="Foreground" Value="{StaticResource Reset.Foreground}"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Foreground" Value="{StaticResource buttonReset.foreground}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource buttonReset.borderbrush}"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-                <Setter Property="Foreground" Value="{StaticResource Reset.IsMouseOver}"/>
-                <Setter Property="Background" Value="#c9250c"/>
+                <Setter Property="Foreground" Value="{StaticResource buttonReset.hover.foreground}"/>
+                <Setter Property="Background" Value="{StaticResource buttonReset.hover.background}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="true">
                 <Setter Property="Foreground" Value="{StaticResource Reset.IsMouseOver}"/>
