ADIN1200_Implementation: - changed speed visibilities to base from selected speed mode directly instead of a local bool variable set by speed mode - added update of speed visibilities to device change/selection and upon selection of speed mode - added visibility only during forced speed for MDIX - added a bitfield reset register write to ManMdix during Auto MDIX - added a bitfield reset register write to NrgPdTxEn during EDPD Disable

--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -121,7 +121,7 @@
                 </telerik:PropertyDefinition>
 
                 <!--MDIX-->
-                <telerik:PropertyDefinition Description="MDIX" DisplayName="MDIX" GroupName="MDIX" OrderIndex="4">
+                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsForcedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="MDIX" DisplayName="MDIX" GroupName="MDIX" OrderIndex="4">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <telerik:RadComboBox ItemsSource="{Binding MDIXs}"
